# roc

./: .buildinfo  .gitignore  .mcp.json  .pre-commit-config.yaml  404.html  CLAUDE.md  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  SECURITY.md  agent.toml  cookiecutter-config-file.yml  coverage.json  genindex.html  index.html  mkdocs.yml  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  settings.toml  sonar-project.properties
.fttemplates/jupyter/: [DATE_NOW('yyyy.MM.dd-HH.mm.ss')] - [FTName].ipynb  [DATE_NOW('yyyy.MM.dd-HH.mm.ss')]-[FTName%paramcase].ipynb
.fttemplates/roc_experiment/: .ftsettings.json  [DATE_NOW('yyyy.MM.dd-HH.mm.ss')] - EXP - [FTName].ipynb
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml  release-drafter.yml
.github/_ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml  labels.yml  release-drafter.yml
.prompts/: check-architectural-drift.prompt  dashboard-uat.prompt  document-architecture-leaf.prompt  git-commit.prompt  pre-push.prompt  update-claude-md.prompt
_autosummary/: roc.component.html  roc.config.html  roc.event.html  roc.graphdb.html  roc.html  roc.perception.html  roc.script.html
_modules/: index.html  modules.html  roc.html
_modules/roc/: component.html  config.html  event.html  graphdb.html  perception.html  script.html
_sources/: index.rst.txt
_sources/_autosummary/: roc.component.rst.txt  roc.config.rst.txt  roc.event.rst.txt  roc.graphdb.rst.txt  roc.perception.rst.txt  roc.rst.txt  roc.script.rst.txt
_sources/_modules/: modules.rst.txt  roc.rst.txt
_static/: bizstyle.js
dashboard-ui/: CLAUDE.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
dashboard-ui/__mocks__/: socket.io-client.ts
dashboard-ui/e2e/: dashboard-default-loads.spec.ts  frame-load-perf.spec.ts  go-live-flow.spec.ts  live-update-via-invalidation.spec.ts  url-sovereignty.spec.ts
dashboard-ui/src/: App.bookmark-error.test.tsx  App.coverage.test.tsx  App.coverage2.test.tsx  App.empty-catalog.test.tsx  App.game-handling.test.tsx  App.live-mode.test.tsx  App.test.tsx  App.tsx  App.url-sovereignty.test.tsx  architecture.test.ts  cytoscape-fcose.d.ts  main.tsx  react-cytoscapejs.d.ts  test-setup.ts  test-utils.tsx
design/: algorithm-updates.md  architecture-documentation-guide.md  attention-design.md  claude-code-debugging-design.md  claude-code-debugging-implementation-plan.md  code-review-20260303.md  code-review-20260316.md  code-review-20260418.md  dashboard-accordion-toolbar.md  dashboard-bugfix-plan.md  dashboard-bugs.md  dashboard-fixes-20260418.md  dashboard-modals.md  dashboard-refactor-notes-20260419.md  dashboard-server-redesign.md  dashboard-step-performance.md  dirichlet-categorical-object-resolution-design.md  dirichlet-categorical-object-resolution-implementation-plan.md  file-remapping.md  graph-visualization-design.md  graph-visualization-implementation-plan.md  ior-design.md  ior-implementation-plan.md  ior-research.md  live-step-performance-fix.md  live-subprocess-logs.md  msot-cleanup-punch-list.md  nle-multistep-design.md  object-resolution-alternatives.md  object-transforms-implementation-plan.md  object-transforms.md  panel-best-practices.md  panel-component-plan.md  panel-design.md  panel-implementation-plan.md  panel-ui-plan.md  panel-v2-plan.md  playback-state-machine.md  react-dashboard-design.md  roc-data-flow.md  (+8 more)
docker/: README.md
docs/: conf.py  gen_ref_pages.py  index.md  index.rst
experiments/: 2024.06.25-18.35.36 - EXP - attention debug.ipynb  2024.06.26-10.43.28-scikit-learn-clustering-exploration.ipynb
experiments/2024.06.25-07.38.08-poetry-testing/: 2024.06.25-07.38.08-poetry-testing.ipynb
experiments/2024.06.26-10.43.28-scikit-learn-clustering-exploration/: 2024.06.26-10.43.28-scikit-learn-clustering-exploration.ipynb
experiments/2024.06.30-08.30.41-networkx-exploration/: 2024.06.30-08.30.41-networkx-exploration.ipynb
experiments/2024.07.23-10.38.05-cupy-learning/: 2024.07.23-10.38.05-cupy-learning.ipynb
experiments/2024.08.04-09.45.18-jupyter-magics/: 2024.08.04-09.45.18-jupyter-magics.ipynb
experiments/2024.08.05-20.23.36-EXP-breakpoint-testing/: 2024.08.05-20.23.36-EXP-breakpoint-testing.ipynb
experiments/2024.08.09-07.20.42-EXP-graphdb-and-networkx/: 2024.08.09-07.20.42-EXP-graphdb-and-networkx.ipynb  graph-2024.08.11-16.19.14.gexf  graph-2024.08.11-16.19.15.gml  graph-2024.08.11-16.19.16.dot  graph-2024.08.11-16.19.16.graphml  graph-2024.08.11-16.19.17.adj.json  graph-2024.08.11-16.19.17.node-link.json  graph-2024.08.11-16.19.18.cytoscape.json  graph-2024.08.11-16.19.18.pajek  graph-2024.08.11-16.19.19.adjlist  graph-2024.08.11-16.19.19.madjlist  graph-2024.08.11-16.19.20.edges
experiments/2024.08.14-06.56.06-numpy-grid/: 2024.08.14-06.56.06-numpy-grid.ipynb
experiments/2024.08.18-08.11.48-multiprocessing-learning/: 2024.08.18-08.11.48-multiprocessing-learning.ipynb
experiments/2024.08.18-10.15.41-EXP-first-knitting/: 2024.08.18-10.15.41-EXP-first-knitting.ipynb
poetry-kernel/: README.md  kernel.json
roc/: README.graphdb.md  __init__.py  action.py  attention.py  breakpoint.py  cleanup_cli.py  component.py  config.py  dashboard_cli.py  debugpy_setup.py  environment.py  event.py  eventbus.py  expmod.py  game_manager.py  graphdb.py  gymnasium.py  intrinsic.py  location.py  logger.py  object.py  object_transform.py  observability.py  perception.py  point.py  predict.py  saliency_attenuation.py  script.py  sequencer.py  server_cli.py  significance.py  transformable.py  transformer.py
search/: search_index.json
tests/: action_test.py  attention_test.py  breakpoint_test.py  component_test.py  config_test.py  conftest.py  delta_test.py  distance_test.py  environment_test.py  event_test.py  expmod_test.py  flood_test.py  graphdb_test.py  intrinsic_test.py  line_test.py  location_test.py  logger_test.py  motion_test.py  object_test.py  observability_test.py  perception_test.py  point_test.py  sequencer_test.py  significance_test.py  single_test.py  transformer_test.py
(+491 files in other folders)
